Bug 297029 - calligrastage crash when you insert a table
Summary: calligrastage crash when you insert a table
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-29 11:02 UTC by roman
Modified: 2012-03-29 13:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description roman 2012-03-29 11:02:31 UTC
Application: calligrastage (2.4 RC 2)
KDE Platform Version: 4.8.1 (4.8.1) (Compiled from sources)
Qt Version: 4.8.0
Operating System: Linux 3.2.8-calculate x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
1. run calligrastage, There is no difference between creating a new document and opening an existing one.
2 select the Insert Table tool.
3. click the mouse on the slide.
4. the application will crash.

- Custom settings of the application:
[Autocorrect]
AdvancedAutocorrect=false
AutoBoldUnderline=false
AutoFormatBulletList=false
AutoFormatURLs=false
AutoFractions=true
AutoNumbering=false
CapitalizeWeekDays=false
FixTwoUppercaseChars=false
ReplaceDoubleQuotes=false
ReplaceSingleQuotes=false
SingleSpaces=true
SuperscriptAppendix=true
TrimParagraphs=true
UppercaseFirstCharOfSentence=false
enabled=true
formatLanguage=ru
***

The crash can be reproduced every time.

-- Backtrace:
Application: Stage (calligrastage), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fe901d31780 (LWP 31650))]

Thread 2 (Thread 0x7fe8f833d700 (LWP 31651)):
#0  0x0000003ab36cfee3 in poll () from /lib64/libc.so.6
#1  0x0000003ab6e47614 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x0000003ab6e47ad1 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x0000003947baf936 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x0000003947b7f7c2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x0000003947b7fa75 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x0000003947a7d0b8 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x0000003947b5e508 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x0000003947a7f72b in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x0000003ab4207b00 in start_thread () from /lib64/libpthread.so.0
#10 0x0000003ab36d7e7d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fe901d31780 (LWP 31650)):
[KCrash Handler]
#6  0x0000003dc43171dc in ?? () from /usr/lib64/libflake.so.9
#7  0x0000003dc4325764 in KoCreateShapesTool::createStrategy(KoPointerEvent*) () from /usr/lib64/libflake.so.9
#8  0x0000003dc4325509 in KoInteractionTool::mousePressEvent(KoPointerEvent*) () from /usr/lib64/libflake.so.9
#9  0x0000003dc42c9204 in KoToolProxy::mousePressEvent(KoPointerEvent*) () from /usr/lib64/libflake.so.9
#10 0x0000003dc42c9324 in KoToolProxy::mousePressEvent(QMouseEvent*, QPointF const&) () from /usr/lib64/libflake.so.9
#11 0x0000003dc5842c24 in KoPACanvas::mousePressEvent(QMouseEvent*) () from /usr/lib64/libkopageapp.so.9
#12 0x0000003dbb228701 in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#13 0x0000003dbb1d6a14 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#14 0x0000003dbb1dc020 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#15 0x0000003dbca62986 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#16 0x0000003947b8079b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#17 0x0000003dbb1d7a25 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#18 0x0000003dbb2561d8 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#19 0x0000003dbb2548b9 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#20 0x0000003dbb27d132 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#21 0x0000003ab6e47102 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#22 0x0000003ab6e478f8 in ?? () from /usr/lib64/libglib-2.0.so.0
#23 0x0000003ab6e47ad1 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#24 0x0000003947baf8df in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#25 0x0000003dbb27cdde in ?? () from /usr/lib64/qt4/libQtGui.so.4
#26 0x0000003947b7f7c2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#27 0x0000003947b7fa75 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#28 0x0000003947b841fb in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#29 0x0000003dbea0219d in kdemain () from /usr/lib64/libkdeinit4_calligrastage.so
#30 0x0000003ab362205d in __libc_start_main () from /lib64/libc.so.6
#31 0x0000000000400709 in _start ()

Possible duplicates by query: bug 235636.

Reported using DrKonqi
Comment 1 T Zachmann 2012-03-29 11:28:14 UTC
What do you mean by Table Tool? Please explain detailed what you are doing so that we can reproduce this.

I tried to insert a spreadsheed and that work without problems.
Comment 2 roman 2012-03-29 11:49:17 UTC
В сообщении от 29 марта 2012 11:28:14 вы написали:
> https://bugs.kde.org/show_bug.cgi?id=297029
> 
> T Zachmann <t.zachmann@zagge.de> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> Status|UNCONFIRMED                 |NEEDSINFO
>          Resolution|---                         |WAITINGFORINFO
> 
> --- Comment #1 from T Zachmann <t.zachmann@zagge.de> ---
> What do you mean by Table Tool? Please explain detailed what you are doing
> so that we can reproduce this.
> 
> I tried to insert a spreadsheed and that work without problems.
***
Side panels are "objects", there is a drop-down list to insert various 
objects, including tables.
http://simplest-image-hosting.net/png-0-tables
Comment 3 Franz Trischberger 2012-03-29 12:18:58 UTC
https://bugs.kde.org/show_bug.cgi?id=293704
reproducable only if you don't run kde with default-localization (non-localized). switch it to (e.g.) german, and it will crash. any calligra-app will crash, not only calligrastage or words.
Comment 4 roman 2012-03-29 12:31:35 UTC
Yes, When the system language set to English U.S. program is not falling. O_o
Comment 5 Halla Rempt 2012-03-29 13:32:45 UTC
Git commit af29c8a7a9d67b476b4de68604e01f1558181b12 by Boudewijn Rempt.
Committed on 29/03/2012 at 15:32.
Pushed by rempt into branch 'master'.

Fix inserting table shape in non-english locale

Comparing a translated name with a fixed text isn't going to work...
Related: bug 293704

Okay to backport to 2.4?

M  +2    -0    libs/flake/KoDeferredShapeFactoryBase.h
M  +2    -7    libs/flake/KoShapeFactoryBase.cpp
M  +2    -0    sheets/shape/TableShapeDeferredFactory.h
M  +1    -1    sheets/shape/TableShapeFactory.cpp
M  +1    -0    sheets/shape/spreadsheetshape-deferred.desktop

http://commits.kde.org/calligra/af29c8a7a9d67b476b4de68604e01f1558181b12
Comment 6 Halla Rempt 2012-03-29 13:55:08 UTC
Git commit 0f96e4b78756deaba77b2d8d486ea5585bd8f652 by Boudewijn Rempt.
Committed on 29/03/2012 at 15:32.
Pushed by rempt into branch 'calligra/2.4'.

Fix inserting table shape in non-english locale

Comparing a translated name with a fixed text isn't going to work...
Related: bug 293704

Okay to backport to 2.4?

M  +2    -0    libs/flake/KoDeferredShapeFactoryBase.h
M  +2    -7    libs/flake/KoShapeFactoryBase.cpp
M  +2    -0    sheets/shape/TableShapeDeferredFactory.h
M  +1    -1    sheets/shape/TableShapeFactory.cpp
M  +1    -0    sheets/shape/spreadsheetshape-deferred.desktop

http://commits.kde.org/calligra/0f96e4b78756deaba77b2d8d486ea5585bd8f652