Fix inserting table shape in non-english locale

Comparing a translated name with a fixed text isn't going to work...

BUG:297029
BUG:293704

Okay to backport to 2.4?